test/errors/i64_mod_zero.luv
# RET: 1
# ERR: {self}:5:17:    x = 12345 % 0
# ERR: {ssss}                      ^ error: Divide by zero.
def int main():
    x = 12345 % 0
